// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MetricQueryBuilder snapshot: post-calculation queries matches snapshot for a percent-of-total post-calculation query 1`] = `
"WITH
  metrics AS (
    SELECT
      "table1".dim1 AS "table1_dim1",
      MAX("table1".number_column) AS "table1_metric1"
    FROM
      "db"."schema"."table1" AS "table1"
    GROUP BY
      1
  ),
  postcalculation_metrics AS (
    SELECT
      *,
      (
        CAST(metrics."table1_metric1" AS FLOAT) / CAST(
          NULLIF(SUM(metrics."table1_metric1") OVER (), 0) AS FLOAT
        )
      ) AS "table1_percent_of_total_metric"
    FROM
      metrics
  )
SELECT
  *
FROM
  postcalculation_metrics
ORDER BY
  "table1_metric1" DESC
LIMIT
  10"
`;

exports[`MetricQueryBuilder snapshot: post-calculation queries matches snapshot for a running-total post-calculation query 1`] = `
"WITH
  metrics AS (
    SELECT
      "table1".dim1 AS "table1_dim1",
      "table1".category AS "table1_category",
      MAX("table1".number_column) AS "table1_metric1"
    FROM
      "db"."schema"."table1" AS "table1"
    GROUP BY
      1,
      2
  ),
  postcalculation_metrics AS (
    SELECT
      *,
      SUM(metrics."table1_metric1") OVER (
        PARTITION BY
          "table1_category"
        ORDER BY
          "table1_metric1" DESC ROWS BETWEEN UNBOUNDED PRECEDING
          AND CURRENT ROW
      ) AS "table1_running_total_metric"
    FROM
      metrics
  )
SELECT
  *
FROM
  postcalculation_metrics
ORDER BY
  "table1_metric1" DESC
LIMIT
  10"
`;
